--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a full-stack project which will show strangest and weirdest cars ever created. Users can explore the collection and contribute their own findings.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon server.js"
   },
   "keywords": [],
   "author": "",
