--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-mongoURI = "mongodb+srv://shriyansjindal:shriyansjindal@weirdcars.w3uftdr.mongodb.net/WeirdCars?retryWrites=true&w=majority&appName=WeirdCars"
+mongoURI = "mongodb+srv://shriyansjindal:shriyansjindal@weirdcars.w3uftdr.mongodb.net/weirdcar-db?retryWrites=true&w=majority&appName=WeirdCars"
